--- a/app/views/book/edit.html.erb
+++ b/app/views/book/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>id: <%= @task.id %> のタスク編集ページ</h1>
+<h1>id: <%= @book.id %> のタスク編集ページ</h1>
 
-  <%= render 'form', task: @task %>
+  <%= render 'form', book: @book %>
 
-<%= link_to '一覧に戻る', tasks_path %>
+<%= link_to '一覧に戻る', books_path %>
