--- a/app/views/book/new.html.erb
+++ b/app/views/book/new.html.erb
@@ -1,5 +1,5 @@
-<h1>タスクの新規作成ページ</h1>
+<h1>登録本の新規作成ページ</h1>
 
- <%= render 'form', task: @task %>
+ <%= render 'form', book: @book %>
 
-<%= link_to '一覧に戻る', tasks_path %>
+<%= link_to '一覧に戻る', books_path %>
