--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -9,9 +9,9 @@
     </div>
   <% end %>
 
-  <li></li>
-  <%= f.label :create_at, '日付' %><%= f.text_field :create_at %>,<%= f.label :category, 'カテゴリ' %><%= f.text_field :category %>, <%= f.label :title, 'タイトル' %><%= f.text_field :title %>
-  <%= f.label :content, '内容' %><%= f.text_field :content%>
+  <li><%= f.label :category, 'カテゴリ：' %><%= f.text_field :category %></li>
+  <li><%= f.label :title, 'タイトル：' %><%= f.text_field :title %></li>
+  <li><%= f.label :content, '内容　　：' %><%= f.text_field :content%></li>
 
   <%= f.submit '投稿' %>
 <% end %>
