--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>id: <%= @book.id %> のタスク編集ページ</h1>
+<h1>登録した本の編集ページ</h1>
 
+  <li> No.<%= @book.id %></li>
   <%= render 'form', book: @book %>
 
 <%= link_to '一覧に戻る', books_path %>
