--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -33,3 +33,4 @@
 </div>
       <%= form_with(model: @user, local: true) do |f| %>
       <%= render 'layouts/error_messages', model: f.object %>
+      <% end %>
