--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -9,9 +9,21 @@
     </div>
   <% end %>
 
-  <li><%= f.label :category, 'カテゴリ：' %><%= f.text_field :category %></li>
-  <li><%= f.label :title, 'タイトル：' %><%= f.text_field :title %></li>
-  <li><%= f.label :content, '内容　　：' %><%= f.text_field :content%></li>
+  <div class="form-group">
+    <%= f.label :category, 'カテゴリ' %>
+    <%= f.text_field :category, class: 'form-control' %>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :title, 'タイトル' %>
+    <%= f.text_field :title, class: 'form-control' %>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :content, '内容' %>
+    <%= f.text_field :content, class: 'form-control' %>
+  </div>
 
-  <%= f.submit '投稿' %>
+<%= f.submit '投稿', class: 'btn btn-primary' %>
 <% end %>
+
