--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,4 +3,4 @@
   <li> No.<%= @book.id %></li>
   <%= render 'form', book: @book %>
 
-<%= link_to '一覧に戻る', books_path %>
+<%= link_to  '一覧に戻る', books_path, class: 'btn btn-primary' %>
