--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,6 @@
 <h1>本の新規登録ページ</h1>
 
- <%= render 'form', book: @book %>
+  <%= render 'form', book: @book %>
 
-<%= link_to '一覧に戻る', books_path %>
+  <%= link_to  '一覧に戻る', books_path, class: 'btn btn-primary' %>
+
