--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
     </tr>
   </table>
 
-      <%= link_to '登録した本の一覧へ', root_path, class: 'btn btn-primary' %>
+      <%= link_to '登録した本の一覧', root_path, class: 'btn btn-primary' %>
       <%= link_to 'ユーザー登録を削除する', @user, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-primary' %>
       <p>※ユーザー登録を削除すると、登録した本の情報も一緒に削除されます。</p>
     <% end %>
