--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -25,5 +25,6 @@
   </div>
 
 <%= f.submit '投稿', class: 'btn btn-primary' %>
+<%= link_to  '一覧に戻る', books_path, class: 'btn btn-primary' %>
 <% end %>
 
