--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -21,7 +21,7 @@
   
   <div class="form-group">
     <%= f.label :content, '内容' %>
-    <%= f.text_field :content, class: 'form-control' %>
+    <%= f.text_area :content, class: 'form-control' %>
   </div>
 
 <%= f.submit '投稿', class: 'btn btn-primary' %>
