--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
 
   <table class="table table-bordered">
     <tr>
-      <th>No.　　　</th>
+      <th>No.</th>
       <td><%= @book.id %></td>
     </tr>
     <tr>
@@ -18,7 +18,7 @@
       <td><%= @book.title %></td>
     </tr>
       <th>内容</th>
-      <td><%= @book.content%></td>
+      <td><%= simple_format(@book.content) %></td>
     </tr>
   </table>
 
